--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,7 @@ body {
     
 
 }
+
 .navb a {
     padding: 8px 8px 8px 36px;
     text-decoration: none;
@@ -45,4 +46,119 @@ body {
     height: 5px;
     background-color: black;
     margin: 6px 0;
+}
+.image {
+    animation: up-down infinite alternate 2s;
+}
+@keyframes up-down {
+    from 
+        {
+            transform: translateY(25px)
+        }
+    to 
+        {
+            transform: translateY(0px)   
+        } 
+} 
+
+.btn {
+    background-color: #fb95c2!important;
+    color: white !important;
+    border: none !important;
+}
+.btn1 {
+    border: none !important;
+    all: unset !important;
+    display: inline-block !important;
+    cursor: pointer !important;
+}
+.rose {
+    color: #fb95c2;
+    
+}
+.xx {
+    background-color: white !important;
+    color: #fb95c2!important;
+    border: 1px solid #fb95c2!important ;
+}
+.xx:hover {
+    background-color: #fb95c2!important;
+    color: white !important;
+}
+
+.aaa {
+    width: 300px;
+    background-color: #f4f2f2 !important;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.aaa:hover {
+    background-color: rgb(248, 239, 156) !important;
+}
+
+.parent {
+    width: 100%;
+    height: 350px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    overflow: visible;
+    position: relative;
+    bottom: 100px;
+}
+.prond {
+    position: absolute;
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 25px;
+    bottom: 70px;
+    right: 110px;
+    background-color: white;
+    font-style: italic;
+    font-weight:600 ;
+
+}
+.bor {
+    border: 1px solid #fb95c2!important;
+    width: 370px;
+}
+.ii {
+    color: #fb95c2;
+}
+.bb {
+    
+}
+.imgCarous {
+
+    overflow: visible;
+}
+.carer {
+    border-radius: 0 !important;
+}
+.carer2 {
+    border-radius: 0 !important;
+    
+}
+.car {
+    border-radius: 0 !important;
+    position: relative;
+    left: 20px;
+}
+.border-bottom {
+   
+}
+.qq {
+    margin-left: 200px;
+    margin-bottom: 50px;
+}
+.kk {
+    background-color: #363636 !important;
+}
+.ro {
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    border-radius: 50%;
 }
